tech(UT): completed FireStation controller, Service & Repository testing